my_have_int64_t_in_stdint_h=no
AC_CHECK_HEADER([stdint.h],
                AC_CHECK_TYPE([int64_t],
		              my_have_int64_t_in_stdint_h=yes, ,
			      [#include <stdint.h>]))
##MM: I want   AC_DEFINE(HAVE_INT64_in_stdint_h)])])

##-- follow example
##-- of ~/R/D/R-packages/foreign/configure.ac

AC_OUTPUT()
